apps/development/identity-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  namespace: development
spec:
  replicas: 5
  selector:
    matchLabels:
      name: identity
  template:
    metadata:
      labels:
        name: identity
    spec:
      containers:
        - name: identity
          image: fclebinho/financeiro-api:2024.9.5.11.37.48
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
