apps/development/identity-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: identity-ingress
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: gastei.kub3.dev
    http:
      paths:
      - backend:
          service:
            name: identity-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - gastei.kub3.dev
    secretName: le-gastei-kub3-dev-cert-tls
